# AV-PourTous

./: .gitignore  POS_Invoice.html  PT _POS_Invoice.html  PT_Purchase_Order.html  README.md  client_script-po_supplier_item_fetch.js  package.json  process_fs_bills.js  purchase_receipt_script.js  pyproject.toml  sales_invoice_script.js  submit_offline_fs_bills.js  sync_fs_accounts.js
pourtous/: api.py  hooks.py  modules.txt
pourtous/config/: desktop.py  docs.py
pourtous/fixtures/: custom_field.json
pourtous/pourtous/doctype/fs_account_details/: fs_account_details.js  fs_account_details.json  fs_account_details.py  test_fs_account_details.py
pourtous/pourtous/doctype/fs_bulk_transfer/: fs_bulk_transfer.js  fs_bulk_transfer.json  fs_bulk_transfer.py  test_fs_bulk_transfer.py
pourtous/pourtous/doctype/fs_bulk_transfer_logs/: fs_bulk_transfer_logs.json  fs_bulk_transfer_logs.py
pourtous/pourtous/doctype/po_supplier_items/: po_supplier_items.json  po_supplier_items.py
pourtous/pourtous/doctype/pour_tous_settings/: pour_tous_settings.js  pour_tous_settings.json  pour_tous_settings.py  test_pour_tous_settings.py
pourtous/pourtous/doctype/process_fs_bill_logs/: process_fs_bill_logs.json  process_fs_bill_logs.py
pourtous/pourtous/page/pourtous/: pourtous.js  pourtous.json
pourtous/pourtous/report/custom_sales_report/: custom_sales_report.js  custom_sales_report.json  custom_sales_report.py
pourtous/pourtous/report/daily_sales/: daily_sales.js  daily_sales.json  daily_sales.py
pourtous/public/: node_modules
pourtous/public/js/: pourtous.bundle.js
(+9 files in other folders)
